fix horizontal scrollbar height

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,10 @@ html {
 
 body { @apply hide-scrollbar }
 
-::-webkit-scrollbar { width: 0.4rem }
+::-webkit-scrollbar {
+  width: 0.4rem;
+  height: 0.4rem;
+}
 ::-webkit-scrollbar-track { background: transparent }
 ::-webkit-scrollbar-thumb {
   background-color: theme('colors.gray.600');
